# hbd-bot

./: .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  app.db  fly.toml  setup-sms-sweeper.sh
.github/workflows/: run-sweeper.yml
common/: Cargo.toml
common/src/: lib.rs  message_central.rs  surge.rs  twilio.rs
migrations/: 20250718061321_initial.sql
sms-sweeper/: Cargo.toml
sms-sweeper/src/: lib.rs  main.rs
sms-sweeper/tests/: integration_tests.rs
test_defaults/: main.rs
web/: Cargo.toml
web/src/: main.rs
web/src/controllers/: app.rs  auth.rs  mod.rs  pages.rs  settings.rs  sweeper.rs
web/static/css/: app.css  login.css  style.css  styles.css
web/static/js/: login.js
web/templates/: add.html  app.html  base.html  edit.html  landing.html  login.html  privacy.html  settings.html
