[package]
name = "common"
version = "0.1.0"
edition = "2021"

[dependencies]
sqlx = { version = "0.7", features = [
    "sqlite",
    "runtime-tokio-native-tls",
    "macros",
    "migrate",
] }
chrono = { version = "0.4.41", features = ["clock"] }
chrono-tz = "0.10.4"
reqwest = { version = "0.12.22", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.140"
